Bug 1672501 - Initialize scProfilerMainThreadId from profiler_init - r=gregtatum

Differential Revision: https://phabricator.services.mozilla.com/D94419