mozglue/baseprofiler/public/BaseProfiler.h
@@ -500,7 +500,9 @@ MFBT_API int profiler_current_process_id();
 // Get the current thread's ID.
 MFBT_API int profiler_current_thread_id();
 
-extern MFBT_DATA const int scProfilerMainThreadId;
+// Statically initialized to 0, then set once from profiler_init(), which should
+// be called from the main thread before any other use of the profiler.
+extern MFBT_DATA int scProfilerMainThreadId;
 
 inline int profiler_main_thread_id() { return scProfilerMainThreadId; }
 
